# vision-ai

./: .env.example  .env.runpod.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py  router.py
docs/: architecture.md  core-api-implementation-pattern.md  deployment-setup.md  diffusers-inference-parity.md  fp8-version-implementation-status.md  gpu-execution-strategies.md  gpu-runtime-and-concurrency.md  inference-optimization-seedvr2-qwen-fp8.md  runpod-glamify-image-ai-setup.md  runpod-scaling-architecture.md  seedvr2-2730-optimization.md  seedvr2-upscale-2730-4096-status.md  startup-and-tryon-upscale-optimization-plan.md  startup-optimization-implementation-handoff.md  tryon-ai-toolkit-inference-parity.md  tryon-flow.md  tryon-specialist-multilora-implementation.md  update-tryon-flow.md  upscale-reference-design.md  wardrobe-api-contract.md  wardrobe-changes.md   wardrobe-flow.md  wardrobe-fp8-regression-resolution.md
glamify_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
review_outputs/: minicpm_awq_results_20260607.jsonl
scripts/: bootstrap.sh  glamify-supervisor-wardrobe-tryon.sh  glamify-supervisor-wk-tryon-noupscale.sh  glamify-supervisor.sh  install_gpu_stack.sh  probe_resident_runtimes.py  probe_resident_vram.py  runpod_dev_config.py  runpod_start.sh  validate_gpu_stack.py
tests/: conftest.py  test_auth.py  test_glamify_progress.py  test_health.py  test_image_resize.py  test_minicpm_service.py  test_routes.py  test_runtime_coordinator.py  test_storage_client.py  test_tryon_collage.py  test_tryon_runtime.py  (+7 more)
(+90 files in other folders)
