[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glamify-ai"
version = "0.1.0"
description = "Single-container GPU API for wardrobe and try-on workflows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "azure-storage-blob>=12.26,<13.0",
  "fastapi>=0.115,<1.0",
  "PyJWT>=2.9,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<1.0",
  "pillow>=10.4,<12.0",
  "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
